fixed text alignment

--- a/client/index.css
+++ b/client/index.css
@@ -115,9 +115,9 @@ nav ul {
     align-items: center;
 }
 
-/* #mountainContainer{
+#mountainContainer{
     text-align: center;
-} */
+}
 
 #forcastP{
     text-align: center;
